--- a/Movie Ticket Booking/bin/Movie Ticket Booking.dll.config
+++ b/Movie Ticket Booking/bin/Movie Ticket Booking.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="movieConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\DDU\SEM-V\WAD\Project\Movie Ticket Booking\App_Data\Movie.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="movieConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\DDU\SEM-V\WAD\Project\Final\Movie Ticket Booking\App_Data\Movie.mdf;Integrated Security=True"/>
 	</connectionStrings>
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
